# AccessTSN_Industrial_Use_Case_Demo_OPCUACommunication

./: .gitignore  .gitmodules  AccessTSNDemoServer.uap  README.md  build_install.sh
accesstsn_demoapps_common/: LICENSE  README.md
accesstsn_demoapps_common/demo/: demoreader.c  demowriter.c
nc_machine/: accesstsn_demo.tt2pro  accesstsn_demo.ua  accesstsn_demo.xml
nc_machine/example/: AccessTSNDemoServer.uap  CMakeCache.txt  CMakeLists.txt  main.c
nc_machine/example/models/: accesstsn.bsd  accesstsn_demo.csv
nc_machine/example/src_generated/: accesstsndemo_nodeids.h  cmake_install.cmake  mk_shminterface.h  namespace_AccessTSNDemo_generated.c  namespace_AccessTSNDemo_generated.h  namespace_accesstsndemo_generated.c  namespace_accesstsndemo_generated.h  namespace_nc_generated.c  namespace_nc_generated.h  nc_nodeids.h  types_AccessTSNDemo_generated.c  types_AccessTSNDemo_generated.h  types_AccessTSNDemo_generated_encoding_binary.h  types_AccessTSNDemo_generated_handling.h  types_accesstsndemo_generated.c  types_accesstsndemo_generated.h  types_accesstsndemo_generated_encoding_binary.h  types_accesstsndemo_generated_handling.h  types_nc_generated.c  types_nc_generated.h  types_nc_generated_encoding_binary.h  types_nc_generated_handling.h
